# remote-fancontrol

./: .gitignore  README.md  fancontrol-client.json  fancontrol-server.json  install.sh  pyproject.toml  remote-fancontrol-client.service  remote-fancontrol-server.service  requirements.txt  setup.cfg  setup.py
.cursor/: rules
amdgpu_fancontrol/client/: temperature_monitor.py
amdgpu_fancontrol/common/: config.py
amdgpu_fancontrol/server/: fan_controller.py
examples/: fancontrol-client-venus.json  fancontrol-server-venus.json
remote_fancontrol/: __init__.py
remote_fancontrol/client/: __init__.py  __main__.py  temperature_monitor.py
remote_fancontrol/common/: __init__.py  config.py
remote_fancontrol/server/: __init__.py  __main__.py  fan_controller.py
